--- a/Code/pokemon-analysis.ipynb
+++ b/Code/pokemon-analysis.ipynb
@@ -3921,10 +3921,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>name</th>\n",
+       "      <th>type 1</th>\n",
+       "      <th>type 2</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>attack</th>\n",
+       "      <th>defense</th>\n",
+       "      <th>sp. atk</th>\n",
+       "      <th>sp. def</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>legendary</th>\n",
+       "      <th>total</th>\n",
+       "      <th>physical total</th>\n",
+       "      <th>special total</th>\n",
+       "      <th>attack total</th>\n",
+       "      <th>defense total</th>\n",
+       "      <th>mega evolution flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>318</td>\n",
+       "      <td>98</td>\n",
+       "      <td>130</td>\n",
+       "      <td>114</td>\n",
+       "      <td>114</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>405</td>\n",
+       "      <td>125</td>\n",
+       "      <td>160</td>\n",
+       "      <td>142</td>\n",
+       "      <td>143</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>525</td>\n",
+       "      <td>165</td>\n",
+       "      <td>200</td>\n",
+       "      <td>182</td>\n",
+       "      <td>183</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Mega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>625</td>\n",
+       "      <td>223</td>\n",
+       "      <td>242</td>\n",
+       "      <td>222</td>\n",
+       "      <td>243</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>309</td>\n",
+       "      <td>95</td>\n",
+       "      <td>110</td>\n",
+       "      <td>112</td>\n",
+       "      <td>93</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>795</th>\n",
+       "      <td>796</td>\n",
+       "      <td>Diancie</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>Fairy</td>\n",
+       "      <td>50</td>\n",
+       "      <td>100</td>\n",
+       "      <td>150</td>\n",
+       "      <td>100</td>\n",
+       "      <td>150</td>\n",
+       "      <td>50</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>600</td>\n",
+       "      <td>250</td>\n",
+       "      <td>250</td>\n",
+       "      <td>200</td>\n",
+       "      <td>300</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>797</td>\n",
+       "      <td>Mega Diancie</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>Fairy</td>\n",
+       "      <td>50</td>\n",
+       "      <td>160</td>\n",
+       "      <td>110</td>\n",
+       "      <td>160</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>700</td>\n",
+       "      <td>270</td>\n",
+       "      <td>270</td>\n",
+       "      <td>320</td>\n",
+       "      <td>220</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>798</td>\n",
+       "      <td>Hoopa Confined</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>Ghost</td>\n",
+       "      <td>80</td>\n",
+       "      <td>110</td>\n",
+       "      <td>60</td>\n",
+       "      <td>150</td>\n",
+       "      <td>130</td>\n",
+       "      <td>70</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>600</td>\n",
+       "      <td>170</td>\n",
+       "      <td>280</td>\n",
+       "      <td>260</td>\n",
+       "      <td>190</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>799</td>\n",
+       "      <td>Hoopa Unbound</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>80</td>\n",
+       "      <td>160</td>\n",
+       "      <td>60</td>\n",
+       "      <td>170</td>\n",
+       "      <td>130</td>\n",
+       "      <td>80</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>680</td>\n",
+       "      <td>220</td>\n",
+       "      <td>300</td>\n",
+       "      <td>330</td>\n",
+       "      <td>190</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>799</th>\n",
+       "      <td>800</td>\n",
+       "      <td>Volcanion</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>80</td>\n",
+       "      <td>110</td>\n",
+       "      <td>120</td>\n",
+       "      <td>130</td>\n",
+       "      <td>90</td>\n",
+       "      <td>70</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>600</td>\n",
+       "      <td>230</td>\n",
+       "      <td>220</td>\n",
+       "      <td>240</td>\n",
+       "      <td>210</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>800 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #            name   type 1  type 2  hp  attack  defense  sp. atk  \\\n",
+       "0      1       Bulbasaur    Grass  Poison  45      49       49       65   \n",
+       "1      2         Ivysaur    Grass  Poison  60      62       63       80   \n",
+       "2      3        Venusaur    Grass  Poison  80      82       83      100   \n",
+       "3      4   Mega Venusaur    Grass  Poison  80     100      123      122   \n",
+       "4      5      Charmander     Fire     NaN  39      52       43       60   \n",
+       "..   ...             ...      ...     ...  ..     ...      ...      ...   \n",
+       "795  796         Diancie     Rock   Fairy  50     100      150      100   \n",
+       "796  797    Mega Diancie     Rock   Fairy  50     160      110      160   \n",
+       "797  798  Hoopa Confined  Psychic   Ghost  80     110       60      150   \n",
+       "798  799   Hoopa Unbound  Psychic    Dark  80     160       60      170   \n",
+       "799  800       Volcanion     Fire   Water  80     110      120      130   \n",
+       "\n",
+       "     sp. def  speed  generation  legendary  total  physical total  \\\n",
+       "0         65     45           1      False    318              98   \n",
+       "1         80     60           1      False    405             125   \n",
+       "2        100     80           1      False    525             165   \n",
+       "3        120     80           1      False    625             223   \n",
+       "4         50     65           1      False    309              95   \n",
+       "..       ...    ...         ...        ...    ...             ...   \n",
+       "795      150     50           6       True    600             250   \n",
+       "796      110    110           6       True    700             270   \n",
+       "797      130     70           6       True    600             170   \n",
+       "798      130     80           6       True    680             220   \n",
+       "799       90     70           6       True    600             230   \n",
+       "\n",
+       "     special total  attack total  defense total  mega evolution flag  \n",
+       "0              130           114            114                False  \n",
+       "1              160           142            143                False  \n",
+       "2              200           182            183                False  \n",
+       "3              242           222            243                 True  \n",
+       "4              110           112             93                False  \n",
+       "..             ...           ...            ...                  ...  \n",
+       "795            250           200            300                False  \n",
+       "796            270           320            220                 True  \n",
+       "797            280           260            190                False  \n",
+       "798            300           330            190                False  \n",
+       "799            220           240            210                False  \n",
+       "\n",
+       "[800 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation Analysis\n",
+    "\n",
+    "> mega evolution and stats<br>\n",
+    "> number of types and stats<br>\n",
+    "> different types and stats<br>\n",
+    "> legendary and stats<br>\n",
+    "> legendary and number of types<br>"
+   ]
   },
   {
    "cell_type": "code",
@@ -3941,32 +4282,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Pokemon Analysis\n",
+    "\n",
+    "> pokemon with stats greater than 85 and 90 percentiles"
+   ]
   },
   {
    "cell_type": "code",
