--- a/Code/python-practise.ipynb
+++ b/Code/python-practise.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,27 +82,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
    "source": [
-    "def prime_number_check(number):\n",
-    "    pass\n"
+    "import math\n",
+    "\n",
+    "\n",
+    "def prime_number_within_range(num_lower, num_higher):\n",
+    "    prime_numbers = []\n",
+    "    for number in range(num_lower, num_higher + 1):\n",
+    "        cnt_factors = 0\n",
+    "        if number == 1:\n",
+    "            continue\n",
+    "        for divisor in range(1, (math.floor(number**0.5) + 1)):\n",
+    "            if number % divisor == 0:\n",
+    "                cnt_factors += 1\n",
+    "        if cnt_factors == 1:\n",
+    "            prime_numbers.append(number)\n",
+    "\n",
+    "    return prime_numbers\n",
+    "\n",
+    "\n",
+    "print(prime_number_within_range(1, 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Write a Python function to check if a given string of parentheses is balanced. For example, (), ([]), and ({[]}) are balanced, but ([)] and ({[}) are not.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def balanced_parenthesis_check(pattern):\n",
+    "    length = len(pattern)\n",
+    "    if length % 2 != 0:\n",
+    "        return False\n",
+    "    for i in range(length // 2):\n",
+    "        temp_pattern = pattern[i] + pattern[length - 1 - i]\n",
+    "        print(temp_pattern)\n",
+    "        if temp_pattern not in ['()', '[]', r'{}']:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "balanced_parenthesis_check(\"()\")"
+   ]
   },
   {
    "cell_type": "code",
