--- a/Code/tomas-beuzen-practise.ipynb
+++ b/Code/tomas-beuzen-practise.ipynb
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,21 +991,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.85002291,  1.41395193,  0.57573614,  0.15133506,  0.04202688,\n",
-       "        0.68507616,  0.20138123,  1.04948221, -3.52739538, -2.02467227,\n",
-       "       -0.50225399, -0.70008306,  0.6360949 , -1.96663053,  0.84432891,\n",
-       "        0.97376557,  0.71880494,  0.25972306, -0.04173132,  0.69342175,\n",
-       "        1.31678744,  0.22489574, -2.55705985,  1.00221273,  0.07722073,\n",
-       "        0.08565814,  1.16787152])"
+       "array([-0.74170141,  0.8508562 ,  0.94810128, -0.16170964, -0.38380337,\n",
+       "        3.38303379, -0.13832739,  0.59702745, -0.57858167, -1.34498995,\n",
+       "       -1.28866218, -0.29299247,  0.94976887, -0.64649478,  0.73475878,\n",
+       "       -0.21034628, -0.7271775 ,  0.74888676, -0.29184353, -1.01166537,\n",
+       "       -0.29965973,  1.24303274, -0.40107799, -1.31754062, -1.7084746 ,\n",
+       "       -0.76927331,  0.17025278])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
        "        8.10526316,  8.57894737,  9.05263158,  9.52631579, 10.        ])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
        "       [21, 22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
        "20"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "20"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "6"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
        "20"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
        "array([13, 14])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "44"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
        "array([17, 27])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
        "array([13, 14])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,11 +1332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(f'')"
+    "df = pd.read_csv(r'Data/food_consumption.csv')"
    ]
   },
   {
@@ -1348,10 +1348,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1430, 4)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1362,10 +1375,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country           object\n",
+       "food_category     object\n",
+       "consumption      float64\n",
+       "co2_emmission    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1376,10 +1406,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.383993006993"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.co2_emmission.mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1390,10 +1433,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "130"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.food_category.nunique()\n",
+    "df.country.nunique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1404,10 +1471,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country          Argentina\n",
+       "food_category         Beef\n",
+       "consumption          55.48\n",
+       "co2_emmission       1712.0\n",
+       "Name: 2, dtype: object"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[df['co2_emmission'].idxmax()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1418,10 +1502,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"co2_emmission\"] > 1000][\"country\"].nunique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1432,10 +1529,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country          Liberia\n",
+       "food_category       Beef\n",
+       "consumption         0.78\n",
+       "co2_emmission      24.07\n",
+       "Name: 1410, dtype: object"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[df[df[\"food_category\"] == \"Beef\"]['consumption'].idxmin()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1446,10 +1560,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>food_category</th>\n",
+       "      <th>consumption</th>\n",
+       "      <th>co2_emmission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>Sierra Leone</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1395</th>\n",
+       "      <td>Sri Lanka</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1406</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1417</th>\n",
+       "      <td>Liberia</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1428</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Soybeans</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>130 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           country food_category  consumption  co2_emmission\n",
+       "9        Argentina      Soybeans         0.00           0.00\n",
+       "20       Australia      Soybeans         0.19           0.09\n",
+       "31         Albania      Soybeans         0.00           0.00\n",
+       "42         Iceland      Soybeans         0.11           0.05\n",
+       "53     New Zealand      Soybeans         0.44           0.20\n",
+       "...            ...           ...          ...            ...\n",
+       "1384  Sierra Leone      Soybeans         0.00           0.00\n",
+       "1395     Sri Lanka      Soybeans         0.00           0.00\n",
+       "1406     Indonesia      Soybeans         1.12           0.50\n",
+       "1417       Liberia      Soybeans         0.63           0.28\n",
+       "1428    Bangladesh      Soybeans         0.61           0.27\n",
+       "\n",
+       "[130 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['food_category'] == 'Soybeans']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1460,10 +1708,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71477.97"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_categories = ['Pork','Polutry','Fish','Lamb & Goat','Beef']\n",
+    "df[df['food_category'].isin(food_categories)]['co2_emmission'].sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1474,10 +1736,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34891.14"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[~df['food_category'].isin(food_categories)]['co2_emmission'].sum()"
+   ]
   }
  ],
  "metadata": {
