update: new solution testing

--- a/Code/tmp.ipynb
+++ b/Code/tmp.ipynb
@@ -12,64 +12,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.DataFrame({\"tweet\": [\"dswjruiwehuignwejr\", \"ebitbeiuybthiren\"]})"
+    "data = pd.DataFrame({\"tweet\": [\"dswjruiwehuignwejr\", \"ebitbeiuybthiren\", 'sdewg', 'rteheth'], 'id': [1, 2, 3, 4]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask1 = ~data['tweet'].str.startswith('d')\n",
+    "mask2 = data['id'] % 2 != 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ebitbeiuybthiren</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              tweet\n",
-       "1  ebitbeiuybthiren"
+       "0    False\n",
+       "1    False\n",
+       "2     True\n",
+       "3    False\n",
+       "dtype: bool"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "data[data['tweet'].str.len() < 17]"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
