--- a/Code/tmp.ipynb
+++ b/Code/tmp.ipynb
@@ -2,48 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from datetime import datetime, date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "employee = pd.DataFrame(\n",
+    "    data = {\n",
+    "        'user_id': [1, 2, 3, 1, 2, 3],\n",
+    "        \"date\": [date(2024, 1, 2), date(2024, 1, 3), date(2024, 1, 3), date(2024, 1, 4), date(2024, 1, 5), date(2024, 1, 6)],\n",
+    "        \"xyz\": [1, 2, 3, 4, 5, 6]\n",
+    "    }\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "1    2024-01-02\n",
+       "2    2024-01-03\n",
+       "3    2024-01-03\n",
+       "Name: date, dtype: object"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee.groupby('user_id')['date'].min()"
+   ]
   },
   {
    "cell_type": "code",
