--- a/Code/tmp.ipynb
+++ b/Code/tmp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "employee = pd.DataFrame(\n",
-    "    data = {\n",
-    "        'user_id': [1, 2, 3, 1, 2, 3],\n",
-    "        \"date\": [date(2024, 1, 2), date(2024, 1, 3), date(2024, 1, 3), date(2024, 1, 4), date(2024, 1, 5), date(2024, 1, 6)],\n",
-    "        \"xyz\": [1, 2, 3, 4, 5, 6]\n",
+    "    data={\n",
+    "        \"user_id\": [1, 1, 1, 2, 2, 2],\n",
+    "        \"s_id\": [2, 2, 3, 1, 2, 3],\n",
+    "        \"d_id\": [3, 4, 3, 1, 1, 1],\n",
     "    }\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>s_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  s_id\n",
+       "0        1     2\n",
+       "1        2     3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "employee.groupby('user_id')['date'].min()"
+    "employee.groupby('user_id', as_index=False)['s_id'].nunique()"
    ]
   },
   {
